add swegger getID
